client/src/styles/Footer.module.scss
footer {
  max-width: 100%;
  padding: 20px 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--bg-color-sec);
  color: var(--txt-color-dk);
  z-index: 4;
}

.navLinksContainer {
  display: flex;
  list-style: none;
  gap: 15px;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
}

.start {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;
}

.logo {
  padding: 0;
}

.logo img {
  max-width: 50px;
}

.scroll button {
  font-weight: 400;
}

.navLink,
.scroll button {
  text-decoration: none;
  font-family: var(--font-main);
  font-weight: 500;
  font-size: 16px;
  color: var(--txt-color-dk);

  &:hover {
    text-decoration: underline var(--txt-color-dk);
    color: var(--txt-color-dk);
  }

  &.active {
    text-decoration: double underline var(--txt-color-dk);
  }
}

.scroll button {
  margin: 0;
  padding: 0;
  border: none;
  background: transparent;
  font-weight: 400;
}

.credits p {
  font-size: 14px;
  margin-left: 10px;
  color: var(--txt-color-dk);
}

@media (max-width: 768px) {
  footer {
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 1rem;
    padding: 15px 10px;
  }

  .start {
    flex-direction: column;
    gap: 10px;
  }

  .logo img {
    display: none;
  }

  .scroll button {
    font-weight: bold;
  }

  .navLink,
  .scroll button {
    -webkit-tap-highlight-color: transparent;
    transition: color 0.15s ease, text-decoration 0.15s ease;
  }

  .navLink:hover,
  .scroll button:hover {
    text-decoration: none;
    color: var(--txt-color-dk);
  }

  .navLink:active,
  .scroll button:active {
    color: var(--txt-color-dk);
    text-decoration: underline solid var(--txt-color-dk);
  }

  .navLink.active {
    text-decoration: double underline var(--txt-color-dk);
  }

  .navLinksContainer {
    flex-direction: column;
    align-items: center;
    padding: 0;
    margin: 1rem 0;
    padding-inline-start: 0;
  }

  .credits {
    margin-bottom: 10px;
    p {
      font-size: 0.8rem;
      margin: 0;
    }
  }
}

